# api_testing_scratchpad

./: .gitignore  Dockerfile  RADME.md  api_test.py  customer_helpers.py  pyproject.toml  pytest.ini  requirements.txt
api_framework/: pytest.ini
api_framework/src/helpers/: customer_helpers.py
api_framework/src/utils/: generic.py
api_framework/tests/customers/: test_create_customers_smoke.py
config/: configurations.py
data/: create_order_payload.json
db_connectors/: customers_dao.py  orders_dao.py  products_dao.py
helpers/: customer_helpers.py  orders_helper.py  product_helpers.py
src/configs/: hosts_config.py
src/helpers/: customer_helpers.py
src/utils/: requests_utils.py
tests/: test_create_customers_smoke.py  test_get_customers_smoke.py  test_get_products_smoke.py  test_healthcheck.py
tests/customers/: test_create_customers_smoke.py  test_get_customers_smoke.py
tests/orders/: test_create_order_smoke.py  test_update_order.py
tests/products/: test_create_product_smoke.py  test_get_products_smoke.py  test_get_products_with_filter.py
utils/: credentials_utils.py  db_utils.py  generic_utils.py  requests_utils.py  woo_api_utils.py
