[tool.poetry]
name = "api-testing-scratchpad"
version = "0.1.0"
description = "API testing scratchpad"
authors = ["ikari2k <pluta.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
woocommerce = "^3.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
